== Change log

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/[Keep a Changelog]
and this project adheres to http://semver.org/[Semantic Versioning].

=== [UNRELEASED]
==== Changed
* Most port configuration methods now return a `Result<()>`.

==== Removed
* The `BaudRate` enum was removed in favor of a `u32`.

=== [2.3.0] - 2018-03-13
==== Added
* Added `examples/hardware_check.rs` for use in debugging library or
  driver issues when using physical serial ports.
* Added `SerialPort::try_clone` which allows for cloning a port for full-duplex
  reading and writing.

==== Changed
* Removed configuration caching for serial ports. The underlying implementations
  for all platforms cached a configuration struct so that modifying the port
  settings involved a single switch into kernel space. This has been removed so
  now two system calls are needed for every configuration change. This is
  probably a slight performance regression, but should allow the new
  `SerialPort::try_clone` interface to work as people expect.

==== Fixed
* `TTYPort::into_raw_fd` will now work as expected. It previously closed the
  port so the returned file descriptor would be invalid.

=== [2.2.0] - 2018-03-13
Unreleased, happened due to a user error using `cargo-release`

=== [2.1.0] - 2018-02-14
==== Added
* `impl FromRawHandle` for `COMPort`

==== Changed
* Specific IO-related errors are now returned instead of mapping every IO
  error to Unknown. This makes it possible to catch things like time-out
  errors.
* Changed all baud rates to be reported as the discrete `BaudRate::Baud*` types
  rather than as the `BaudRate::BaudOther(*)` type.

==== Fixed
* Modem-type USB serial devices are now enumerated on OS X. This now allows
  connected Arduinos to be detected.
* Compilation on FreeBSD and NetBSD was fixed by removing the 921600 baud rates.
  These will be re-added in a future release.

=== [2.0.0] - 2017-12-18
==== Added