@@ -388,42 +388,7 @@ impl SerialPort for TTYPort {
 
         assert!(ospeed == termios.c_ispeed);
 
-        match Into::<u32>::into(ospeed) {
-            50 => Ok(50),
-            75 => Ok(75),
-            110 => Ok(110),
-            134 => Ok(134),
-            150 => Ok(150),
-            200 => Ok(200),
-            300 => Ok(300),
-            600 => Ok(600),
-            1200 => Ok(1200),
-            1800 => Ok(1800),
-            2400 => Ok(2400),
-            4800 => Ok(4800),
-            9600 => Ok(9600),
-            19200 => Ok(19200),
-            38400 => Ok(38400),
-            57600 => Ok(57600),
-            115200 => Ok(115200),
-            230400 => Ok(230400),
-            460800 => Ok(460800),
-            500000 => Ok(500000),
-            576000 => Ok(576000),
-            921600 => Ok(921600),
-            1000000 => Ok(1000000),
-            1152000 => Ok(1152000),
-            1500000 => Ok(1500000),
-            2000000 => Ok(2000000),
-            2500000 => Ok(2500000),
-            3000000 => Ok(3000000),
-            3500000 => Ok(3500000),
-            4000000 => Ok(4000000),
-            _ => Err(Error::new(
-                    ErrorKind::Unknown,
-                    "Invalid baud rate setting encountered",
-            )),
-        }
+        Ok(ospeed)
     }
 
     /// Returns the port's baud rate
@@ -550,40 +515,6 @@ impl SerialPort for TTYPort {
 
         termios.c_cflag &= !CBAUD;
         termios.c_cflag |= BOTHER;
-
-        let baud_rate = match baud_rate {
-            50 => 50,
-            75 => 75,
-            110 => 110,
-            134 => 134,
-            150 => 150,
-            200 => 200,
-            300 => 300,
-            600 => 600,
-            1200 => 1200,
-            1800 => 1800,
-            2400 => 2400,
-            4800 => 4800,
-            9600 => 9600,
-            19200 => 19200,
-            38400 => 38400,
-            57600 => 57600,
-            115200 => 115200,
-            230400 => 230400,
-            460800 => 460800,
-            500000 => 500000,
-            576000 => 576000,
-            921600 => 921600,
-            1000000 => 1000000,
-            1152000 => 1152000,
-            1500000 => 1500000,
-            2000000 => 2000000,
-            2500000 => 2500000,
-            3000000 => 3000000,
-            3500000 => 3500000,
-            4000000 => 4000000,
-            _ => return Err(nix::Error::from_errno(nix::errno::Errno::EINVAL).into()),
-        };
 
         termios.c_ispeed = baud_rate;
         termios.c_ospeed = baud_rate;
